--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "ethereum-cryptography": "^1.2.0",
+    "ethereumjs-util": "^7.1.5",
     "express": "^4.18.1"
   }
 }
